Add header styling

--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,11 @@
 
     <
 </head>
-<body>
+<body class="contactPage">
     <header>
-        <h2 class="headerLogo"><a href="index.html">Delicious</a></h2>
         <nav class="menu">
+            <h2 class="headerLogo"><a href="index.html">Delicious</a></h2>
+            <p aria-hidden="true" class="bars"><i class="fas fa-bars"></i></p>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
