--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <script src="https://kit.fontawesome.com/90932e0d16.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i|Raleway:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="shortcut icon" href="delicious-assets/favicon.ico">
 </head>
-<body>
+<body class="indexPage">
     <header>
-        <h1 class="headerLogo"><a href="index.html">Delicious</a></h1>
         <nav class="menu">
+            <h1 class="headerLogo"><a href="index.html">Delicious</a></h1>
+            <p aria-hidden="true" class="bars"><i class="fas fa-bars"></i></p>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -30,7 +32,7 @@
     <main>
         <section class="recipes">
             <div class="recipesIntro">
-                <img src="delcious-assets/home-2.jpeg" alt="A blue bowl filled with purple lettuce sits on a black surface surrounded by small pieces of purple lettuce.">
+                <img src="./delcious-assets/home-2.jpeg" alt="A blue bowl filled with purple lettuce sits on a black surface surrounded by small pieces of purple lettuce.">
                 <div class="recipesContent">
                     <h2>Most popular recipes</h2>
                     <p>Pea horseradish azuki bean lettuce avocado asparagus okra. Kohlrabi radish okra azuki bean corn fava bean mustard
