--- a/blog.html
+++ b/blog.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="styles/styles.css">
 
 </head>
-<body>
+<body class="blogPage">
     <header>
-        <h2 class="headerLogo"><a href="index.html">Delicious</a></h2>
         <nav class="menu">
+            <h2 class="headerLogo"><a href="index.html">Delicious</a></h2>
+            <p aria-hidden="true" class="bars"><i class="fas fa-bars"></i></p>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
