Making naming consistent

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <section class="recipes">
             <div class="recipesIntro">
-                <img src="./delcious-assets/home-2.jpeg" alt="A blue bowl filled with purple lettuce sits on a black surface surrounded by small pieces of purple lettuce.">
+                <img src="deliciousAssets/home2.jpeg" alt="A blue bowl filled with purple lettuce sits on a black surface surrounded by small pieces of purple lettuce.">
                 <div class="recipesContent">
                     <h2>Most popular recipes</h2>
                     <p>Pea horseradish azuki bean lettuce avocado asparagus okra. Kohlrabi radish okra azuki bean corn fava bean mustard
@@ -40,53 +40,56 @@
                     <a href="recipes.html">View Recipes</a>
                 </div>
             </div>
-            <ul class="recipeOptions">
-                <li>
-                    <i class="fas fa-lemon"></i>
-                    <h3>Vegetarian</h3>
-                    <p>green bean swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprou</p>
-                </li>
-                <li>
-                    <i class="fas fa-coffee"></i>
-                    <h3>Desserts</h3>
-                    <p>Lotus root water spinach fennel kombu</p>
-                </li>
-                <li>
-                    <i class="fas fa-leaf"></i>
-                    <h3>Salads</h3>
-                    <p>pumpkin onion chickpea gram corn pea</p>
-                </li>
-                <li>
-                    <i class="fas fa-utensils"></i>
-                    <h3>Appetizers</h3>
-                    <p>Kohlrabi radish okra azuki bean corn fava bean mustard tigernut jícama</p>
-                </li>
-                <li>
-                    <i class="fas fa-glass-martini"></i>
-                    <h3>Drinks</h3>
-                    <p>kakadu plum komatsuna black-eyed pea green bean zucchini gourd winter purslane</p>
-                </li>
-                <li>
-                    <i class="fas fa-utensil-spoon"></i>
-                    <h3>Side dishes</h3>
-                    <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth</p>
-                </li>
-            </ul>
+            <div class="recipeOptions">
+                <img src="deliciousAssets/home3.jpeg" alt="A soft shell taco containing steak and salsa verde is propped up by limes.">
+                <ul>
+                    <li>
+                        <i class="fas fa-lemon"></i>
+                        <h3>Vegetarian</h3>
+                        <p>green bean swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprou</p>
+                    </li>
+                    <li>
+                        <i class="fas fa-coffee"></i>
+                        <h3>Desserts</h3>
+                        <p>Lotus root water spinach fennel kombu</p>
+                    </li>
+                    <li>
+                        <i class="fas fa-leaf"></i>
+                        <h3>Salads</h3>
+                        <p>pumpkin onion chickpea gram corn pea</p>
+                    </li>
+                    <li>
+                        <i class="fas fa-utensils"></i>
+                        <h3>Appetizers</h3>
+                        <p>Kohlrabi radish okra azuki bean corn fava bean mustard tigernut jícama</p>
+                    </li>
+                    <li>
+                        <i class="fas fa-glass-martini"></i>
+                        <h3>Drinks</h3>
+                        <p>kakadu plum komatsuna black-eyed pea green bean zucchini gourd winter purslane</p>
+                    </li>
+                    <li>
+                        <i class="fas fa-utensil-spoon"></i>
+                        <h3>Side dishes</h3>
+                        <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="restaurants">
-            <img src="delicious-assets/home-4.jpeg" alt="An image of the inside of a restaurant. There are rows of small metal and wooden bistro tables and chairs. The walls are concrete that are painted white on the upper half of the wall.">
-            <img src="delicious-assets/home-circle-text.png" alt="A Seal stating Yummm a fancy food place.">
+            <img src="deliciousAssets/home4.jpeg" alt="An image of the inside of a restaurant. There are rows of small metal and wooden bistro tables and chairs. The walls are concrete that are painted white on the upper half of the wall.">
+            <img src="deliciousAssets/homeCircleText.png" alt="A Seal stating Yummm a fancy food place.">
             <h2>Our Restaurants</h2>
             <p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts</p>
         </section>
         <section class="gallery">
             <ul>
-                <li><img src="delicious-assets/home-5.jpeg" alt="A bowl of something fancay."></li>
-                <li><img src="delicious-assets/home-6.jpeg" alt="An artisinal burger sits on a white plate."></li>
-                <li><img src="delicious-assets/home-7.jpeg" alt="A bowl in red onions sit in the foreground with beets and greens in the background."></li>
-                <li><img src="delicious-assets/home-8.jpeg" alt="A rustic pink cake decorated with flowers and leaves."></li>
-                <li><img src="delicious-assets/home-9.jpeg" alt="A few blueberry scones sit on a cooking surface between a small bowl of blueberries and 2 white flowers."></li>
-                <li><img src="delicious-assets/home-10.jpeg" alt="A bowl of tzatziki sauce with a spoon in it rests on a white platter."></li>
+                <li><img src="deliciousAssets/home5.jpeg" alt="A bowl of something fancay."></li>
+                <li><img src="deliciousAssets/home6.jpeg" alt="An artisinal burger sits on a white plate."></li>
+                <li><img src="deliciousAssets/home7.jpeg" alt="A bowl in red onions sit in the foreground with beets and greens in the background."></li>
+                <li><img src="deliciousAssets/home8.jpeg" alt="A rustic pink cake decorated with flowers and leaves."></li>
+                <li><img src="deliciousAssets/home9.jpeg" alt="A few blueberry scones sit on a cooking surface between a small bowl of blueberries and 2 white flowers."></li>
+                <li><img src="deliciousAssets/home10.jpeg" alt="A bowl of tzatziki sauce with a spoon in it rests on a white platter."></li>
             </ul>
         </section>
         <section class="testimonial">
