Add colour variables & some index css

--- a/index.html
+++ b/index.html
@@ -31,18 +31,17 @@
     </header>
     <main>
         <section class="recipes">
-            <div class="recipesIntro">
                 <img src="deliciousAssets/home2.jpeg" alt="A blue bowl filled with purple lettuce sits on a black surface surrounded by small pieces of purple lettuce.">
                 <div class="recipesContent">
-                    <h2>Most popular recipes</h2>
+                    <h2>Most popular recipes
+                        <div class="divider"></div>
+                    </h2>
                     <p>Pea horseradish azuki bean lettuce avocado asparagus okra. Kohlrabi radish okra azuki bean corn fava bean mustard
                     tigernut jícama green bean celtuce collard greens avocado quandong fennel gumbo black-eyed pea.</p>
                     <a href="recipes.html">View Recipes</a>
                 </div>
-            </div>
-            <div class="recipeOptions">
                 <img src="deliciousAssets/home3.jpeg" alt="A soft shell taco containing steak and salsa verde is propped up by limes.">
-                <ul>
+                <ul class="recipeOptions">
                     <li>
                         <i class="fas fa-lemon"></i>
                         <h3>Vegetarian</h3>
@@ -74,12 +73,13 @@
                         <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth</p>
                     </li>
                 </ul>
-            </div>
         </section>
         <section class="restaurants">
             <img src="deliciousAssets/home4.jpeg" alt="An image of the inside of a restaurant. There are rows of small metal and wooden bistro tables and chairs. The walls are concrete that are painted white on the upper half of the wall.">
             <img src="deliciousAssets/homeCircleText.png" alt="A Seal stating Yummm a fancy food place.">
-            <h2>Our Restaurants</h2>
+            <h2>Our Restaurants
+                <div class="divider"></div>
+            </h2>
             <p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts</p>
         </section>
         <section class="gallery">
@@ -93,7 +93,9 @@
             </ul>
         </section>
         <section class="testimonial">
-            <h2>Hungry Clients</h2>
+            <h2>Hungry Clients
+                <div class="divider"></div>
+            </h2>
             <blockquote>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon
             azuki bean garlic.</blockquote>
             <i class="fas fa-chevron-left"></i>
@@ -110,6 +112,7 @@
             <a href="tel:+12345678910">+1 234 567 8910</a>
         </div>
         <div class="recentPosts">
+            <h3>Recent Posts</h3>
             <ul>
                 <li><a href="#">Gumbo beet greens corn soko</a></li>
                 <li><a href="#">Parsley shallot courgette tatsoi</a></li>
