--- a/blog.html
+++ b/blog.html
@@ -46,39 +46,46 @@
         </nav>
     </main>
     <footer>
-        <div class="contact">
-            <h2 class="footerLogo">Delicious</h2>
-            <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo
-                melon
-                azuki bean garlic.</p>
-            <p>A delicious restaurant <br> Toronto, Ontario</p>
-            <a href="mailto:" yum@food.com">yum@food.com</a>
-            <a href="tel:+12345678910">+1 234 567 8910</a>
+        <div class="wrapper">
+            <section class="footer">
+                <div class="contact">
+                    <h2 class="footerLogo">Delicious</h2>
+                    <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi
+                        tomatillo melon azuki bean garlic.</p>
+                    <p>A delicious restaurant <br> Toronto, Ontario</p>
+                    <a href="mailto:" yum@food.com">yum@food.com</a>
+                    <a href="tel:+12345678910">+1 234 567 8910</a>
+                </div>
+                <div class="recentPosts">
+                    <h3>Recent Posts</h3>
+                    <ul>
+                        <li><a href="#">Gumbo beet greens corn soko</a></li>
+                        <li><a href="#">Parsley shallot courgette tatsoi</a></li>
+                        <li><a href="#">Nori grape silver beet</a></li>
+                        <li><a href="#">melon radish asparagus spinach</a></li>
+                        <li><a href="#">fava bean leek dandelion</a></li>
+                        <li><a href="#">tigernut jícama green bean</a></li>
+                    </ul>
+                </div>
+                <div class="subscribeForm">
+                    <h3>Subscribe Now</h3>
+                    <form>
+                        <fieldset class="clearfix">
+                            <legend>Get all of our newest recipes immediately in your inbox!</legend>
+                            <label for="email" class="visuallyHidden">Enter your email</label>
+                            <input type="email" id="email" name="email" placeholder="Enter your email">
+                            <button>
+                                <p class="visuallyHidden">Submit</p><i class="fas fa-long-arrow-alt-right"
+                                    aria-hidden="true"></i>
+                            </button>
+                        </fieldset>
+                    </form>
+                </div>
+            </section>
         </div>
-        <div class="recentPosts">
-            <ul>
-                <li><a href="#">Gumbo beet greens corn soko</a></li>
-                <li><a href="#">Parsley shallot courgette tatsoi</a></li>
-                <li><a href="#">Nori grape silver beet</a></li>
-                <li><a href="#">melon radish asparagus spinach</a></li>
-                <li><a href="#">fava bean leek dandelion</a></li>
-                <li><a href="#">tigernut jícama green bean</a></li>
-            </ul>
+        <div>
+            <p class="copyright">Copyrights © 2015 by <a href="#">Polar</a>. All Rights Reserved.</p>
         </div>
-        <div class="subscribeForm">
-            <h3>Subscribe Now</h3>
-            <form>
-                <fieldset>
-                    <legend>Get all of our newest recipes immediately in your inbox!</legend>
-                    <label for="email" class="visuallyHidden">Enter your email</label>
-                    <input type="email" id="email" name="email" placeholder="Enter your email">
-                    <button>
-                        <p class="visuallyHidden">Submit</p><i class="fas fa-long-arrow-alt-right" aria-hidden="true"></i>
-                    </button>
-                </fieldset>
-            </form>
-        </div>
-        <p class="copyright">Copyrights © 2015 by <a href="#">Polar</a>. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
