--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,6 @@
     <script src="https://kit.fontawesome.com/90932e0d16.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i|Raleway:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
-
-    <
 </head>
 <body class="contactPage">
     <header>
@@ -31,55 +29,90 @@
         </nav>
     </header>
     <main>
-
+        <section class="contactInfo">
+            <div class="contactDetails">
+                <h1>Contact Details</h1>
+                <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon
+                azuki bean garlic.</p>
+                <h2>Working Hours</h2>
+                <date>MON - FRI: 08:00am - 05:30pm</date>
+                <p>Not working on Saturday and Sunday!</p>
+                <h2>Contact Info</h2>
+                <p>A delicious restaurant <br> Toronto, Ontario</p>
+                <a href="mailto:" yum@food.com">yum@food.com</a>
+                <a href="tel:+12345678910">+1 234 567 8910</a>
+            </div>
+        </section>
+        <section class="contactForm">
+            <h2>Drop us a line</h2>
+            <form>
+                <label for="name" class="visuallyHidden">Enter your name</label>
+                <input type="text" id="name" name="name" placeholder="Your name">
+                <label for="email" class="visuallyHidden">Enter your email</label>
+                <input type="email" id="email" name="email" placeholder="Your email">
+                <label for="subject" class="visuallyHidden">Subject title</label>
+                <input type="text" id="subject" name="subject" placeholder="Subject">
+                <label for="message" class="visuallyHidden">Message</label>
+                <input type="text" id="message" name="message" placeholder="Message">
+                <button>Send message <i class="fas fa-long-arrow-alt-right" aria-hidden="true"></i></button>
+            </form>
+        </section>
+        <div class="contactImage"></div>
     </main>
     <footer>
-        <div class="contact">
-            <h2 class="footerLogo">Delicious</h2>
-            <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo
-                melon
-                azuki bean garlic.</p>
-            <p>A delicious restaurant <br> Toronto, Ontario</p>
-            <a href="mailto:" yum@food.com">yum@food.com</a>
-            <a href="tel:+12345678910">+1 234 567 8910</a>
+        <div class="wrapper">
+            <section class="footer">
+                <div class="contact">
+                    <h2 class="footerLogo">Delicious</h2>
+                    <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi
+                        tomatillo melon azuki bean garlic.</p>
+                    <p>A delicious restaurant <br> Toronto, Ontario</p>
+                    <a href="mailto:" yum@food.com">yum@food.com</a>
+                    <a href="tel:+12345678910">+1 234 567 8910</a>
+                </div>
+                <div class="recentPosts">
+                    <h3>Recent Posts</h3>
+                    <ul>
+                        <li><a href="#">Gumbo beet greens corn soko</a></li>
+                        <li><a href="#">Parsley shallot courgette tatsoi</a></li>
+                        <li><a href="#">Nori grape silver beet</a></li>
+                        <li><a href="#">melon radish asparagus spinach</a></li>
+                        <li><a href="#">fava bean leek dandelion</a></li>
+                        <li><a href="#">tigernut jícama green bean</a></li>
+                    </ul>
+                </div>
+                <div class="subscribeForm">
+                    <h3>Subscribe Now</h3>
+                    <form>
+                        <fieldset class="clearfix">
+                            <legend>Get all of our newest recipes immediately in your inbox!</legend>
+                            <label for="email" class="visuallyHidden">Enter your email</label>
+                            <input type="email" id="email" name="email" placeholder="Enter your email">
+                            <button>
+                                <p class="visuallyHidden">Submit</p><i class="fas fa-long-arrow-alt-right"
+                                    aria-hidden="true"></i>
+                            </button>
+                        </fieldset>
+                    </form>
+                    <nav>
+                        <ul class="socials">
+                            <li><a href="https://www.facebook.com"><i class="fab fa-facebook-f" aria-hidden="true"></i>
+                                    <p class="visuallyHidden">Link to Facebook</p>
+                                </a></li>
+                            <li><a href="https://www.twitter.com"><i class="fab fa-twitter" aria-hidden="true"></i>
+                                    <p class="visuallyHidden">Link to Twitter</p>
+                                </a></li>
+                            <li><a href="https://www.instagram.com"><i class="fab fa-instagram" aria-hidden="true"></i>
+                                    <p class="visuallyHidden">Link to Instagram</p>
+                                </a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </section>
         </div>
-        <div class="recentPosts">
-            <ul>
-                <li><a href="#">Gumbo beet greens corn soko</a></li>
-                <li><a href="#">Parsley shallot courgette tatsoi</a></li>
-                <li><a href="#">Nori grape silver beet</a></li>
-                <li><a href="#">melon radish asparagus spinach</a></li>
-                <li><a href="#">fava bean leek dandelion</a></li>
-                <li><a href="#">tigernut jícama green bean</a></li>
-            </ul>
+        <div>
+            <p class="copyright">Copyrights © 2015 by <a href="#">Polar</a>. All Rights Reserved.</p>
         </div>
-        <div class="subscribeForm">
-            <h3>Subscribe Now</h3>
-            <form>
-                <fieldset>
-                    <legend>Get all of our newest recipes immediately in your inbox!</legend>
-                    <label for="email" class="visuallyHidden">Enter your email</label>
-                    <input type="email" id="email" name="email" placeholder="Enter your email">
-                    <button>
-                        <p class="visuallyHidden">Submit</p><i class="fas fa-long-arrow-alt-right" aria-hidden="true"></i>
-                    </button>
-                </fieldset>
-            </form>
-        </div>
-        <nav class="socials">
-            <ul>
-                <li><a href="https://www.facebook.com"><i class="fab fa-facebook-f" aria-hidden="true"></i>
-                        <p class="visuallyHidden">Link to Facebook</p>
-                    </a></li>
-                <li><a href="https://www.twitter.com"><i class="fab fa-twitter" aria-hidden="true"></i>
-                        <p class="visuallyHidden">Link to Twitter</p>
-                    </a></li>
-                <li><a href="https://www.instagram.com"><i class="fab fa-instagram" aria-hidden="true"></i>
-                        <p class="visuallyHidden">Link to Instagram</p>
-                    </a></li>
-            </ul>
-        </nav>
-        <p class="copyright">Copyrights © 2015 by <a href="#">Polar</a>. All Rights Reserved.</p>
     </footer>
-</body>
-</html>
+        </body>
+        </html>
