--- a/index.html
+++ b/index.html
@@ -44,39 +44,53 @@
                 <ul class="recipeOptions">
                     <li>
                         <i class="fas fa-lemon"></i>
-                        <h3>Vegetarian</h3>
-                        <p>green bean swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprou</p>
+                        <div>
+                            <h3>Vegetarian</h3>
+                            <p>green bean swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprou</p>
+                        </div>
                     </li>
                     <li>
                         <i class="fas fa-coffee"></i>
-                        <h3>Desserts</h3>
-                        <p>Lotus root water spinach fennel kombu</p>
+                        <div>
+                            <h3>Desserts</h3>
+                            <p>Lotus root water spinach fennel kombu</p>
+                        </div>
                     </li>
                     <li>
                         <i class="fas fa-leaf"></i>
-                        <h3>Salads</h3>
-                        <p>pumpkin onion chickpea gram corn pea</p>
+                        <div>
+                            <h3>Salads</h3>
+                            <p>pumpkin onion chickpea gram corn pea</p>
+                        </div>
                     </li>
                     <li>
                         <i class="fas fa-utensils"></i>
-                        <h3>Appetizers</h3>
-                        <p>Kohlrabi radish okra azuki bean corn fava bean mustard tigernut jícama</p>
+                        <div>
+                            <h3>Appetizers</h3>
+                            <p>Kohlrabi radish okra azuki bean corn fava bean mustard tigernut jícama</p>
+                        </div>
                     </li>
                     <li>
                         <i class="fas fa-glass-martini"></i>
-                        <h3>Drinks</h3>
-                        <p>kakadu plum komatsuna black-eyed pea green bean zucchini gourd winter purslane</p>
+                        <div>
+                            <h3>Drinks</h3>
+                            <p>kakadu plum komatsuna black-eyed pea green bean zucchini gourd winter purslane</p>
+                        </div>
                     </li>
                     <li>
                         <i class="fas fa-utensil-spoon"></i>
-                        <h3>Side dishes</h3>
-                        <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth</p>
+                        <div>
+                            <h3>Side dishes</h3>
+                            <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth</p>
+                        </div>
                     </li>
                 </ul>
         </section>
         <section class="restaurants">
-            <img src="deliciousAssets/home4.jpeg" alt="An image of the inside of a restaurant. There are rows of small metal and wooden bistro tables and chairs. The walls are concrete that are painted white on the upper half of the wall.">
-            <img src="deliciousAssets/homeCircleText.png" alt="A Seal stating Yummm a fancy food place.">
+            <div class="restaurantImage">
+                <img src="deliciousAssets/home4.jpeg" alt="An image of the inside of a restaurant. There are rows of small metal and wooden bistro tables and chairs. The walls are concrete that are painted white on the upper half of the wall." class="restaurantMainImage">
+                <img src="deliciousAssets/homeCircleText.png" alt="A Seal stating Yummm a fancy food place." class="seal">
+            </div>
             <h2>Our Restaurants
                 <div class="divider"></div>
             </h2>
@@ -93,54 +107,61 @@
             </ul>
         </section>
         <section class="testimonial">
-            <h2>Hungry Clients
-                <div class="divider"></div>
-            </h2>
-            <blockquote>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon
-            azuki bean garlic.</blockquote>
-            <i class="fas fa-chevron-left"></i>
-            <i class="fas fa-chevron-right"></i>
+            <div class="wrapper">
+                <h2>Hungry Clients
+                    <div class="divider"></div>
+                </h2>
+                <blockquote>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon
+                    azuki bean garlic.</blockquote>
+                    <i class="fas fa-chevron-left"></i>
+                    <i class="fas fa-chevron-right"></i>
+            </div>
         </section>
     </main>
     <footer>
-        <div class="contact">
-            <h2 class="footerLogo">Delicious</h2>
-            <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon
-            azuki bean garlic.</p>
-            <p>A delicious restaurant <br> Toronto, Ontario</p>
-            <a href="mailto:"yum@food.com">yum@food.com</a>
-            <a href="tel:+12345678910">+1 234 567 8910</a>
+        <div class="wrapper">
+            <section class="footer">
+                <div class="contact">
+                    <h2 class="footerLogo">Delicious</h2>
+                    <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.</p>
+                    <p>A delicious restaurant <br> Toronto, Ontario</p>
+                    <a href="mailto:"yum@food.com">yum@food.com</a>
+                    <a href="tel:+12345678910">+1 234 567 8910</a>
+                </div>
+                <div class="recentPosts">
+                    <h3>Recent Posts</h3>
+                    <ul>
+                        <li><a href="#">Gumbo beet greens corn soko</a></li>
+                        <li><a href="#">Parsley shallot courgette tatsoi</a></li>
+                        <li><a href="#">Nori grape silver beet</a></li>
+                        <li><a href="#">melon radish asparagus spinach</a></li>
+                        <li><a href="#">fava bean leek dandelion</a></li>
+                        <li><a href="#">tigernut jícama green bean</a></li>
+                    </ul>
+                </div>
+                <div class="subscribeForm">
+                    <h3>Subscribe Now</h3>
+                    <form>
+                        <fieldset class="clearfix">
+                            <legend>Get all of our newest recipes immediately in your inbox!</legend>
+                            <label for="email" class="visuallyHidden">Enter your email</label>
+                            <input type="email" id="email" name="email" placeholder="Enter your email">
+                            <button><p class="visuallyHidden">Submit</p><i class="fas fa-long-arrow-alt-right" aria-hidden="true"></i></button>
+                        </fieldset>
+                    </form>
+                    <nav>
+                        <ul class="socials">
+                            <li><a href="https://www.facebook.com"><i class="fab fa-facebook-f" aria-hidden="true"></i><p class="visuallyHidden">Link to Facebook</p></a></li>
+                            <li><a href="https://www.twitter.com"><i class="fab fa-twitter" aria-hidden="true"></i><p class="visuallyHidden">Link to Twitter</p></a></li>
+                            <li><a href="https://www.instagram.com"><i class="fab fa-instagram" aria-hidden="true"></i><p class="visuallyHidden">Link to Instagram</p></a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </section>
         </div>
-        <div class="recentPosts">
-            <h3>Recent Posts</h3>
-            <ul>
-                <li><a href="#">Gumbo beet greens corn soko</a></li>
-                <li><a href="#">Parsley shallot courgette tatsoi</a></li>
-                <li><a href="#">Nori grape silver beet</a></li>
-                <li><a href="#">melon radish asparagus spinach</a></li>
-                <li><a href="#">fava bean leek dandelion</a></li>
-                <li><a href="#">tigernut jícama green bean</a></li>
-            </ul>
+        <div>
+            <p class="copyright">Copyrights © 2015 by <a href="#">Polar</a>. All Rights Reserved.</p>
         </div>
-        <div class="subscribeForm">
-            <h3>Subscribe Now</h3>
-            <form>
-                <fieldset>
-                    <legend>Get all of our newest recipes immediately in your inbox!</legend>
-                    <label for="email" class="visuallyHidden">Enter your email</label>
-                    <input type="email" id="email" name="email" placeholder="Enter your email">
-                    <button><p class="visuallyHidden">Submit</p><i class="fas fa-long-arrow-alt-right" aria-hidden="true"></i></button>
-                </fieldset>
-            </form>
-        </div>
-        <nav class="socials">
-            <ul>
-                <li><a href="https://www.facebook.com"><i class="fab fa-facebook-f" aria-hidden="true"></i><p class="visuallyHidden">Link to Facebook</p></a></li>
-                <li><a href="https://www.twitter.com"><i class="fab fa-twitter" aria-hidden="true"></i><p class="visuallyHidden">Link to Twitter</p></a></li>
-                <li><a href="https://www.instagram.com"><i class="fab fa-instagram" aria-hidden="true"></i><p class="visuallyHidden">Link to Instagram</p></a></li>
-            </ul>
-        </nav>
-        <p class="copyright">Copyrights © 2015 by <a href="#">Polar</a>. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
