--- a/blog.html
+++ b/blog.html
@@ -30,20 +30,99 @@
         </nav>
     </header>
     <main>
-        
-        <nav class="socials">
-            <ul>
-                <li><a href="https://www.facebook.com"><i class="fab fa-facebook-f" aria-hidden="true"></i>
-                        <p class="visuallyHidden">Link to Facebook</p>
-                    </a></li>
-                <li><a href="https://www.twitter.com"><i class="fab fa-twitter" aria-hidden="true"></i>
-                        <p class="visuallyHidden">Link to Twitter</p>
-                    </a></li>
-                <li><a href="https://www.instagram.com"><i class="fab fa-instagram" aria-hidden="true"></i>
-                        <p class="visuallyHidden">Link to Instagram</p>
-                    </a></li>
-            </ul>
-        </nav>
+        <div class="wrapper">
+            <section class="blogMain">
+                <h1>Pineapple chicken</h1>
+                <p>Posted at <date>July 11, 2018</date> | by Admin | in <a href="recipes.html">Recipes</a></p>
+                <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.</p>
+                <p>Gumbo beet greens corn soko endive gumbo gourd.</p>
+                <p>Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato.</p>
+                <p>Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+                <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce.</p>
+            </section>
+            <section class="blogLinks">
+                <h2>Tags:</h2>
+                <ul>
+                    <li>Recipes,</li>
+                    <li>Chicken,</li>
+                    <li>Pineapple,</li>
+                    <li>Mexican</li>
+                </ul>
+                <h2>Share:</h2>
+                <nav class="socials">
+                    <ul>
+                        <li><a href="https://www.facebook.com"><i class="fab fa-facebook-f" aria-hidden="true"></i>
+                            <p class="visuallyHidden">Link to Facebook</p>
+                        </a></li>
+                        <li><a href="https://www.twitter.com"><i class="fab fa-twitter" aria-hidden="true"></i>
+                            <p class="visuallyHidden">Link to Twitter</p>
+                        </a></li>
+                        <li><a href="https://www.instagram.com"><i class="fab fa-instagram" aria-hidden="true"></i>
+                            <p class="visuallyHidden">Link to Instagram</p>
+                        </a></li>
+                    </ul>
+                </nav>
+            </section>
+            <section class="blogProfile">
+                <img src="deliciousAssets/blog2.jpeg" alt="A photo of Sally Lucas posing in jeans and a white crop top with her hand in her long, wavy hair.">
+                <div class="blogProfileInfo">
+                    <h3>Sally Lucas</h3>
+                    <p>Corn amaranth salsify bunya nuts nori azuki bean chickweed potato bell pepper artichoke. Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery.</p>
+                </div>
+            </section>
+            <section class="blogArticles">
+                <h2>Related Posts</h2>
+                <article>
+                    <img src="deliciousAssets/blog3.jpeg" alt="A beautiful pink cake topped with pink and white flowers and lit candles is held on a white cake stand.">
+                    <h3>How to bake the perfect cake</h3>
+                    <p><date>July 11, 2018</date> | by Admin | in <a href="recipes.html">Recipes</a></p>
+                </article>
+                <article>
+                    <img src="deliciousAssets/blog4.jpeg" alt="Cupcakes with golden wrappers and decorated with cacti made of icing rest on a table.">
+                    <h3>Floral cupcakes</h3>
+                    <p><date>July 19, 2018</date> | by Admin | in <a href="recipes.html">Recipes</a></p>
+                </article>
+                <article>
+                    <img src="deliciousAssets/blog5.jpeg" alt="A person sprinkles greens on an open faced sandwich on a floral plate.">
+                    <h3>Single post with image</h3>
+                    <p><date>July 22, 2018</date> | by Admin | in <a href="recipes.html">Recipes</a></p>
+                </article>
+            </section>
+            <section class="blogComments">
+                <h2>02 Comments</h2>
+                <div class="comment">
+                    <img src="deliciousAssets/blog6.jpeg" alt="A headshot photo of Lucatony Avaro smiling at the camera.">
+                    <div class="commentInfo">
+                        <p><h3>Lucatony Avaro</h3> - Web Developer</p>
+                        <p>Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram celery bitterleaf wattle seed collard greens nori. </p>
+                        <p><date>Jul 17, 2015</date> at <time>15 hours</time> ago.</p>
+                    </div>
+                </div>
+                <div class="comment">
+                    <img src="deliciousAssets/blog7.jpeg" alt="A headshot photo of Brian Hudson wearing a black hat looks over her left shoulder, looking off camera.">
+                    <div class="commentInfo">
+                        <p><h3>Brian Hudson</h3> - Web Developer</p>
+                        <p>Grape wattle seed kombu beetroot horseradish carrot squash brussels sprout chard. </p>
+                        <p><date>Jul 17, 2015</date> at <time>15 hours</time> ago.</p>
+                    </div>
+                </div>
+                <h2>Leave a comment</h2>
+                <fieldset>
+                    <legend>Your email address will not be published. Required fields are marked *</legend>
+                    <form>
+                        <label for="name" class="visuallyHidden">Enter your name *</label>
+                        <input type="text" id="name" name="name" placeholder="Name *" required>
+                        <label for="email" class="visuallyHidden">Enter your email *</label>
+                        <input type="email" id="email" name="email" placeholder="Email *">
+                        <label for="website" class="visuallyHidden">Your Website</label>
+                        <input type="text" id="website" name="website" placeholder="Your Website">
+                        <label for="comment" class="visuallyHidden">Comment</label>
+                        <input type="text" id="comment" name="comment" placeholder="Comment">
+                        <button>Submit Comment</button>
+                    </form>
+                </fieldset>
+            </section>
+        </div>
     </main>
     <footer>
         <div class="wrapper">
