Add contact page, update header and footer

--- a/blog.html
+++ b/blog.html
@@ -24,8 +24,7 @@
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="cart.html"><i class="fas fa-shopping-bag"></i></a></li>
-                <!-- Make a search form maybe? -->
-                <li><i class="fas fa-search"></i></li>
+                <li><a href="#"><i class="fas fa-search"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -37,20 +36,21 @@
                 <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.</p>
                 <p>Gumbo beet greens corn soko endive gumbo gourd.</p>
                 <p>Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato.</p>
-                <p>Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+                <p>Dandelion cucumber earthnut pea peanut soko zucchini.Beetroot water spinach okra water chestnut ricebean pea catsear courgette summer purslane. Water spinach arugula pea tatsoi aubergine spring onion bush tomato kale radicchio turnip chicory salsify pea sprouts fava bean. Dandelion
+                zucchini burdock yarrow chickpea dandelion sorrel</p>
                 <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce.</p>
             </section>
             <section class="blogLinks">
-                <h2>Tags:</h2>
                 <ul>
+                <h2>Tags:</h2>
                     <li>Recipes,</li>
                     <li>Chicken,</li>
                     <li>Pineapple,</li>
                     <li>Mexican</li>
                 </ul>
-                <h2>Share:</h2>
                 <nav class="socials">
                     <ul>
+                        <h2>Share:</h2>
                         <li><a href="https://www.facebook.com"><i class="fab fa-facebook-f" aria-hidden="true"></i>
                             <p class="visuallyHidden">Link to Facebook</p>
                         </a></li>
@@ -67,42 +67,47 @@
                 <img src="deliciousAssets/blog2.jpeg" alt="A photo of Sally Lucas posing in jeans and a white crop top with her hand in her long, wavy hair.">
                 <div class="blogProfileInfo">
                     <h3>Sally Lucas</h3>
-                    <p>Corn amaranth salsify bunya nuts nori azuki bean chickweed potato bell pepper artichoke. Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery.</p>
+                    <p>Corn amaranth salsify bunya nuts nori azuki bean chickweed potato bell pepper artichoke. Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery.Salsify taro catsear garlic gram celery bitterleaf wattle seed collard greens nori. Grape wattle seed kombu beetroot
+                    horseradish carrot squash brussels sprout chard.</p>
                 </div>
             </section>
-            <section class="blogArticles">
+            <section class="relatedContent">
                 <h2>Related Posts</h2>
-                <article>
-                    <img src="deliciousAssets/blog3.jpeg" alt="A beautiful pink cake topped with pink and white flowers and lit candles is held on a white cake stand.">
-                    <h3>How to bake the perfect cake</h3>
-                    <p><date>July 11, 2018</date> | by Admin | in <a href="recipes.html">Recipes</a></p>
-                </article>
-                <article>
-                    <img src="deliciousAssets/blog4.jpeg" alt="Cupcakes with golden wrappers and decorated with cacti made of icing rest on a table.">
-                    <h3>Floral cupcakes</h3>
-                    <p><date>July 19, 2018</date> | by Admin | in <a href="recipes.html">Recipes</a></p>
-                </article>
-                <article>
-                    <img src="deliciousAssets/blog5.jpeg" alt="A person sprinkles greens on an open faced sandwich on a floral plate.">
-                    <h3>Single post with image</h3>
-                    <p><date>July 22, 2018</date> | by Admin | in <a href="recipes.html">Recipes</a></p>
-                </article>
+                <div class="blogArticles">
+                    <article>
+                        <img src="deliciousAssets/blog3.jpeg" alt="A beautiful pink cake topped with pink and white flowers and lit candles is held on a white cake stand.">
+                        <h3>How to bake the perfect cake</h3>
+                        <p><date>July 11, 2018</date> | by <span>Admin </span>| in <a href="recipes.html">Recipes</a></p>
+                    </article>
+                    <article>
+                        <img src="deliciousAssets/blog4.jpeg" alt="Cupcakes with golden wrappers and decorated with cacti made of icing rest on a table.">
+                        <h3>Floral cupcakes</h3>
+                        <p><date>July 19, 2018</date> | by <span>Admin </span>| in <a href="recipes.html">Recipes</a></p>
+                    </article>
+                    <article>
+                        <img src="deliciousAssets/blog5.jpeg" alt="A person sprinkles greens on an open faced sandwich on a floral plate.">
+                        <h3>Single post with image</h3>
+                        <p><date>July 22, 2018</date> | by <span>Admin </span>| in <a href="recipes.html">Recipes</a></p>
+                    </article>
+                </div>
             </section>
             <section class="blogComments">
                 <h2>02 Comments</h2>
                 <div class="comment">
                     <img src="deliciousAssets/blog6.jpeg" alt="A headshot photo of Lucatony Avaro smiling at the camera.">
                     <div class="commentInfo">
-                        <p><h3>Lucatony Avaro</h3> - Web Developer</p>
-                        <p>Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram celery bitterleaf wattle seed collard greens nori. </p>
+                        <h3>Lucatony Avaro</h3> <p>- Web Developer</p>
+                        <p>Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram celery bitterleaf wattle seed collard greens nori. Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut summer purslane
+                        earthnut pea tomato spring onion azuki bean gourd. </p>
                         <p><date>Jul 17, 2015</date> at <time>15 hours</time> ago.</p>
                     </div>
                 </div>
                 <div class="comment">
                     <img src="deliciousAssets/blog7.jpeg" alt="A headshot photo of Brian Hudson wearing a black hat looks over her left shoulder, looking off camera.">
                     <div class="commentInfo">
-                        <p><h3>Brian Hudson</h3> - Web Developer</p>
-                        <p>Grape wattle seed kombu beetroot horseradish carrot squash brussels sprout chard. </p>
+                        <h3>Brian Hudson</h3> <p> - Web Developer</p>
+                        <p>Grape wattle seed kombu beetroot horseradish carrot squash brussels sprout chard. Pea horseradish azuki bean lettuce avocado asparagus okra. Kohlrabi radish okra azuki bean corn fava bean mustard
+                        tigernut jícama green bean celtuce collard greens avocado quandong fennel gumbo black-eyed pea. </p>
                         <p><date>Jul 17, 2015</date> at <time>15 hours</time> ago.</p>
                     </div>
                 </div>
@@ -115,9 +120,9 @@
                         <label for="email" class="visuallyHidden">Enter your email *</label>
                         <input type="email" id="email" name="email" placeholder="Email *">
                         <label for="website" class="visuallyHidden">Your Website</label>
-                        <input type="text" id="website" name="website" placeholder="Your Website">
+                        <input type="text" id="website" name="website" class="website" placeholder="Your Website">
                         <label for="comment" class="visuallyHidden">Comment</label>
-                        <input type="text" id="comment" name="comment" placeholder="Comment">
+                        <input type="text" id="comment" name="comment" class="commentSpot" placeholder="Comment">
                         <button>Submit Comment</button>
                     </form>
                 </fieldset>
@@ -132,8 +137,10 @@
                     <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi
                         tomatillo melon azuki bean garlic.</p>
                     <p>A delicious restaurant <br> Toronto, Ontario</p>
-                    <a href="mailto:" yum@food.com">yum@food.com</a>
-                    <a href="tel:+12345678910">+1 234 567 8910</a>
+                    <ul>
+                        <li><a href="mailto:" yum@food.com">yum@food.com</a></li>
+                        <li><a href="tel:+12345678910">+1 234 567 8910</a></li>
+                    </ul>
                 </div>
                 <div class="recentPosts">
                     <h3>Recent Posts</h3>
