--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,7 @@
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="cart.html"><i class="fas fa-shopping-bag"></i></a></li>
-                <!-- Make a search form maybe? -->
-                <li><i class="fas fa-search"></i></li>
+                <li><a href="#"><i class="fas fa-search"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -35,25 +34,27 @@
                 <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon
                 azuki bean garlic.</p>
                 <h2>Working Hours</h2>
-                <date>MON - FRI: 08:00am - 05:30pm</date>
+                <time><span>MON - FRI:</span> 08:00am - 05:30pm</time>
                 <p>Not working on Saturday and Sunday!</p>
                 <h2>Contact Info</h2>
                 <p>A delicious restaurant <br> Toronto, Ontario</p>
-                <a href="mailto:" yum@food.com">yum@food.com</a>
-                <a href="tel:+12345678910">+1 234 567 8910</a>
+                <ul>
+                    <li><a href="mailto:" yum@food.com">yum@food.com</a></li>
+                    <li><a href="tel:+12345678910">+1 234 567 8910</a></li>
+                </ul>
             </div>
         </section>
         <section class="contactForm">
             <h2>Drop us a line</h2>
             <form>
                 <label for="name" class="visuallyHidden">Enter your name</label>
-                <input type="text" id="name" name="name" placeholder="Your name">
+                <input type="text" id="name" name="name" class="name" placeholder="Your name">
                 <label for="email" class="visuallyHidden">Enter your email</label>
-                <input type="email" id="email" name="email" placeholder="Your email">
+                <input type="email" id="email" name="email" class="email" placeholder="Your email">
                 <label for="subject" class="visuallyHidden">Subject title</label>
                 <input type="text" id="subject" name="subject" placeholder="Subject">
                 <label for="message" class="visuallyHidden">Message</label>
-                <input type="text" id="message" name="message" placeholder="Message">
+                <input type="text" id="message" name="message" class="messageSpot" placeholder="Message">
                 <button>Send message <i class="fas fa-long-arrow-alt-right" aria-hidden="true"></i></button>
             </form>
         </section>
@@ -67,8 +68,10 @@
                     <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi
                         tomatillo melon azuki bean garlic.</p>
                     <p>A delicious restaurant <br> Toronto, Ontario</p>
-                    <a href="mailto:" yum@food.com">yum@food.com</a>
-                    <a href="tel:+12345678910">+1 234 567 8910</a>
+                    <ul>
+                        <li><a href="mailto:" yum@food.com">yum@food.com</a></li>
+                        <li><a href="tel:+12345678910">+1 234 567 8910</a></li>
+                    </ul>
                 </div>
                 <div class="recentPosts">
                     <h3>Recent Posts</h3>
