--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="cart.html"><i class="fas fa-shopping-bag"></i></a></li>
-                <!-- Make a search form maybe? -->
-                <li><i class="fas fa-search"></i></li>
+                <li><a href="#"><i class="fas fa-search"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -96,8 +95,8 @@
             </h2>
             <p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts</p>
         </section>
-        <section class="gallery">
-            <ul>
+        <section >
+            <ul class="gallery">
                 <li><img src="deliciousAssets/home5.jpeg" alt="A bowl of something fancay."></li>
                 <li><img src="deliciousAssets/home6.jpeg" alt="An artisinal burger sits on a white plate."></li>
                 <li><img src="deliciousAssets/home7.jpeg" alt="A bowl in red onions sit in the foreground with beets and greens in the background."></li>
@@ -125,8 +124,10 @@
                     <h2 class="footerLogo">Delicious</h2>
                     <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.</p>
                     <p>A delicious restaurant <br> Toronto, Ontario</p>
-                    <a href="mailto:"yum@food.com">yum@food.com</a>
-                    <a href="tel:+12345678910">+1 234 567 8910</a>
+                    <ul>
+                        <li><a href="mailto:"yum@food.com">yum@food.com</a></li>
+                        <li><a href="tel:+12345678910">+1 234 567 8910</a></li>
+                    </ul>
                 </div>
                 <div class="recentPosts">
                     <h3>Recent Posts</h3>
