Fix layout in index and blog

--- a/index.html
+++ b/index.html
@@ -30,17 +30,20 @@
     </header>
     <main>
         <section class="recipes">
+            <div class="recipeMain">
                 <img src="deliciousAssets/home2.jpeg" alt="A blue bowl filled with purple lettuce sits on a black surface surrounded by small pieces of purple lettuce.">
                 <div class="recipesContent">
                     <h2>Most popular recipes
                         <div class="divider"></div>
                     </h2>
                     <p>Pea horseradish azuki bean lettuce avocado asparagus okra. Kohlrabi radish okra azuki bean corn fava bean mustard
-                    tigernut jícama green bean celtuce collard greens avocado quandong fennel gumbo black-eyed pea.</p>
+                        tigernut jícama green bean celtuce collard greens avocado quandong fennel gumbo black-eyed pea.</p>
                     <a href="recipes.html">View Recipes</a>
                 </div>
+            </div>
+            <div class="recipeOptions">
                 <img src="deliciousAssets/home3.jpeg" alt="A soft shell taco containing steak and salsa verde is propped up by limes.">
-                <ul class="recipeOptions">
+                <ul class="recipeOptionsList">
                     <li>
                         <i class="fas fa-lemon"></i>
                         <div>
@@ -84,6 +87,7 @@
                         </div>
                     </li>
                 </ul>
+            </div>
         </section>
         <section class="restaurants">
             <div class="restaurantImage">
